# watcher

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.override.yml.sample  docker-compose.yml  pyproject.toml
application/settings/: base.py
docker/app/: .bashrc  Dockerfile  entrypoint.dev.sh
